fastfoodapp/templates/fastfood_backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-cip-service
spec:
  selector:
    app: hello
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
...
