fastfoodapp/templates/db-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/db-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/db-tier: "true"
